--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,11 @@ list(LENGTH SOURCES SOURCES_COUNT)
 message(STATUS "[INFO] Sources found: ${SOURCES_COUNT}")
 
 # Build shared library.
-if (NOT LIB_SHARED)
-    set(LIB_SHARED no)
+if (NOT BUILD_SHARED_LIB)
+    set(BUILD_SHARED_LIB off)
 endif()
 
-if (${LIB_SHARED})
+if (${BUILD_SHARED_LIB})
     add_library(${LIBRARY_NAME} SHARED ${SOURCES})
 else()
     add_library(${LIBRARY_NAME} STATIC ${SOURCES})
