--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,75 +7,43 @@ on:
       - dev
 jobs:
   alpine:
-    name: "alpine-${{ matrix.alpine_version }} [${{ matrix.compiler }}-10] [shared: ${{ matrix.build_shared_lib }}]"
+    name: "alpine-3.13 [${{ matrix.compiler }}-10] [shared: ${{ matrix.build_shared_lib }}]"
     runs-on: ubuntu-18.04
     strategy:
       fail-fast: false
       matrix:
-        alpine_version: [3.13]
-        build_shared_lib: ["true", "false"]
+        build_shared_lib: [on, off]
         compiler: [clang, gcc]
     steps:
       - uses: actions/checkout@v2
       - name: Build the Container
         run: |
-          sudo docker build --build-arg alpine_version=${{ matrix.alpine_version }} \
-                            --build-arg build_shared_lib=${{ matrix.build_shared_lib }} \
+          sudo docker build --build-arg build_shared_lib=${{ matrix.build_shared_lib }} \
                             -f docker/alpine/${{ matrix.compiler }}.Dockerfile \
                             --tag=xalwart.base-test:alpine-${{ matrix.compiler }} .
       - name: Run Tests
         run: |
           sudo docker run xalwart.base-test:alpine-${{ matrix.compiler }}
   ubuntu-clang:
-    name: "${{ matrix.os }} [clang-${{ matrix.compiler_version }}] [shared: ${{ matrix.build_shared_lib }}]"
+    name: "${{ matrix.os }} [${{ matrix.compiler }}-${{ matrix.compiler_version }}] [shared: ${{ matrix.build_shared_lib }}]"
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04]
         compiler_version: [10]
-        build_shared_lib: ["true", "false"]
+        compiler: [clang, gcc]
+        build_shared_lib: [on, off]
     steps:
       - uses: actions/checkout@v2
-      - name: Install Compiler
+      - name: "Install ${{ matrix.compiler }}-${{ matrix.compiler_version }}"
+        if: ${{ matrix.compiler == 'clang' }}
         run: |
           sudo apt update -y && \
           sudo pip install --upgrade cmake && \
-          sudo apt install -y clang-${{ matrix.compiler_version }} valgrind
-      - name: Build and Install Google Test Framework
-        run: |
-          git clone -q https://github.com/google/googletest.git && \
-          sudo mkdir -p ./googletest/build && \
-          cd ./googletest/build && \
-          sudo cmake -DCMAKE_CXX_COMPILER=clang++-${{ matrix.compiler_version }} \
-                     -DCMAKE_C_COMPILER=clang-${{ matrix.compiler_version }} .. && \
-          sudo make && \
-          sudo make install
-      - name: Build Tests
-        run: |
-          sudo mkdir build && \
-          cd build/ && \
-          sudo cmake -DCMAKE_CXX_COMPILER=clang++-${{ matrix.compiler_version }} \
-                     -DCMAKE_C_COMPILER=clang-${{ matrix.compiler_version }} \
-                     -DCMAKE_BUILD_TYPE=Debug \
-                     -DBUILD_SHARED_LIB=${{ matrix.build_shared_lib }} \
-                     .. && \
-          sudo make unittests-all
-      - name: Run Tests
-        run: |
-          sudo valgrind --leak-check=full ./build/tests/unittests-all
-  ubuntu-gcc:
-    name: "${{ matrix.os }} [gcc-${{ matrix.compiler_version }}] [shared: ${{ matrix.build_shared_lib }}]"
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-18.04, ubuntu-20.04]
-        compiler_version: [10]
-        build_shared_lib: ["true", "false"]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install Compiler and Check Version
+          sudo apt install -y ${{ matrix.compiler }}-${{ matrix.compiler_version }} valgrind
+      - name: "Install ${{ matrix.compiler }}-${{ matrix.compiler_version }}"
+        if: ${{ matrix.compiler == 'gcc' }}
         run: |
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && \
           sudo apt update -y && \
@@ -86,25 +54,20 @@ jobs:
           sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 30 && \
           sudo update-alternatives --set cc /usr/bin/gcc && \
           sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 30 && \
-          sudo update-alternatives --set c++ /usr/bin/g++ && \
-          gcc --version && \
-          g++ --version
+          sudo update-alternatives --set c++ /usr/bin/g++
       - name: Build and Install Google Test Framework
         run: |
           git clone -q https://github.com/google/googletest.git && \
           sudo mkdir -p ./googletest/build && \
           cd ./googletest/build && \
-          sudo cmake -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
-                     -DCMAKE_C_COMPILER=gcc-${{ matrix.compiler_version }} .. && \
+          sudo cmake .. && \
           sudo make && \
           sudo make install
-      - name: Build Tests
+      - name: Build the Library and Tests
         run: |
           sudo mkdir build && \
           cd build/ && \
-          sudo cmake -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
-                     -DCMAKE_C_COMPILER=gcc-${{ matrix.compiler_version }} \
-                     -DCMAKE_BUILD_TYPE=Debug \
+          sudo cmake -DCMAKE_BUILD_TYPE=Debug \
                      -DBUILD_SHARED_LIB=${{ matrix.build_shared_lib }} \
                      .. && \
           sudo make unittests-all
