--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,13 +36,13 @@ jobs:
         build_shared_lib: [on, off]
     steps:
       - uses: actions/checkout@v2
-      - name: "Install ${{ matrix.compiler }}-${{ matrix.compiler_version }}"
+      - name: "Install clang-${{ matrix.compiler_version }}"
         if: ${{ matrix.compiler == 'clang' }}
         run: |
           sudo apt update -y && \
           sudo pip install --upgrade cmake && \
-          sudo apt install -y ${{ matrix.compiler }}-${{ matrix.compiler_version }} valgrind
-      - name: "Install ${{ matrix.compiler }}-${{ matrix.compiler_version }}"
+          sudo apt install -y clang-${{ matrix.compiler_version }} valgrind
+      - name: "Install gcc-${{ matrix.compiler_version }}"
         if: ${{ matrix.compiler == 'gcc' }}
         run: |
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && \
@@ -60,14 +60,15 @@ jobs:
           git clone -q https://github.com/google/googletest.git && \
           sudo mkdir -p ./googletest/build && \
           cd ./googletest/build && \
-          sudo cmake .. && \
+          sudo cmake -DCMAKE_C_COMPILER=${{ matrix.compiler }}-${{ matrix.compiler_version }} .. && \
           sudo make && \
           sudo make install
       - name: Build the Library and Tests
         run: |
           sudo mkdir build && \
           cd build/ && \
-          sudo cmake -DCMAKE_BUILD_TYPE=Debug \
+          sudo cmake -DCMAKE_C_COMPILER=${{ matrix.compiler }}-${{ matrix.compiler_version }} \
+                     -DCMAKE_BUILD_TYPE=Debug \
                      -DBUILD_SHARED_LIB=${{ matrix.build_shared_lib }} \
                      .. && \
           sudo make unittests-all
