--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,38 +39,42 @@ jobs:
       - name: "Install clang-${{ matrix.compiler_version }}"
         if: ${{ matrix.compiler == 'clang' }}
         run: |
-          sudo apt update -y && \
-          sudo pip install --upgrade cmake && \
+          sudo apt update -y
+          sudo pip install --upgrade cmake
           sudo apt install -y clang-${{ matrix.compiler_version }} valgrind
+          sudo update-alternatives --set cc /usr/bin/clang-${{ matrix.compiler_version }}
+          sudo update-alternatives --set c++ /usr/bin/clang++-${{ matrix.compiler_version }}
       - name: "Install gcc-${{ matrix.compiler_version }}"
         if: ${{ matrix.compiler == 'gcc' }}
         run: |
-          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && \
-          sudo apt update -y && \
-          sudo pip install --upgrade cmake && \
-          sudo apt install -y gcc-${{ matrix.compiler_version }} g++-${{ matrix.compiler_version }} valgrind && \
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.compiler_version }} 10 && \
-          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ matrix.compiler_version }} 10 && \
-          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 30 && \
-          sudo update-alternatives --set cc /usr/bin/gcc && \
-          sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 30 && \
+          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+          sudo apt update -y
+          sudo pip install --upgrade cmake
+          sudo update-alternatives --remove-all gcc
+          sudo update-alternatives --remove-all g++
+          sudo apt install -y gcc-${{ matrix.compiler_version }} g++-${{ matrix.compiler_version }} valgrind
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.compiler_version }} 10
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ matrix.compiler_version }} 10
+          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 30
+          sudo update-alternatives --set cc /usr/bin/gcc
+          sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 30
           sudo update-alternatives --set c++ /usr/bin/g++
       - name: Build and Install Google Test Framework
         run: |
-          git clone -q https://github.com/google/googletest.git && \
-          sudo mkdir -p ./googletest/build && \
-          cd ./googletest/build && \
-          sudo cmake -DCMAKE_C_COMPILER=${{ matrix.compiler }}-${{ matrix.compiler_version }} .. && \
-          sudo make && \
+          git clone -q https://github.com/google/googletest.git
+          sudo mkdir -p ./googletest/build
+          cd ./googletest/build
+          sudo cmake -DCMAKE_C_COMPILER=${{ matrix.compiler }}-${{ matrix.compiler_version }} ..
+          sudo make
           sudo make install
       - name: Build the Library and Tests
         run: |
-          sudo mkdir build && \
-          cd build/ && \
+          sudo mkdir build
+          cd build/
           sudo cmake -DCMAKE_C_COMPILER=${{ matrix.compiler }}-${{ matrix.compiler_version }} \
                      -DCMAKE_BUILD_TYPE=Debug \
                      -DBUILD_SHARED_LIB=${{ matrix.build_shared_lib }} \
-                     .. && \
+                     ..
           sudo make unittests-all
       - name: Run Tests
         run: |
