--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
           sudo apt update -y
           sudo pip install --upgrade cmake
           sudo apt install -y clang-${{ matrix.compiler_version }} valgrind
+          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/cc 40
+          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang-${{ matrix.compiler_version }} 60
+          sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/c++ 40
+          sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-${{ matrix.compiler_version }} 60
           sudo update-alternatives --set cc /usr/bin/clang-${{ matrix.compiler_version }}
           sudo update-alternatives --set c++ /usr/bin/clang++-${{ matrix.compiler_version }}
       - name: "Install gcc-${{ matrix.compiler_version }}"
@@ -50,15 +54,13 @@ jobs:
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt update -y
           sudo pip install --upgrade cmake
-          sudo update-alternatives --remove-all gcc
-          sudo update-alternatives --remove-all g++
           sudo apt install -y gcc-${{ matrix.compiler_version }} g++-${{ matrix.compiler_version }} valgrind
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.compiler_version }} 10
-          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ matrix.compiler_version }} 10
-          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 30
-          sudo update-alternatives --set cc /usr/bin/gcc
-          sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 30
-          sudo update-alternatives --set c++ /usr/bin/g++
+          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/cc 40
+          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc-${{ matrix.compiler_version }} 60
+          sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/c++ 40
+          sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++-${{ matrix.compiler_version }} 60
+          sudo update-alternatives --set cc /usr/bin/gcc-${{ matrix.compiler_version }}
+          sudo update-alternatives --set c++ /usr/bin/g++-${{ matrix.compiler_version }}
       - name: Build and Install Google Test Framework
         run: |
           git clone -q https://github.com/google/googletest.git
