--- a/docker/alpine/Dockerfile
+++ b/docker/alpine/Dockerfile
@@ -1,13 +1,20 @@
 FROM alpine:3.13
 
 ARG build_shared_lib=off
+ARG cc=clang
+ARG cxx=clang++
 
 RUN echo "ipv6" >> /etc/modules
 
 RUN apk update && apk upgrade
 
+RUN apk add --update --no-cache bash
+
+COPY . .
+
+RUN bash ./scripts/install_compiler_alpine.sh $cc
+
 RUN apk add --update --no-cache \
-    gcc \
     alpine-sdk \
     dpkg \
     cmake \
@@ -18,18 +25,18 @@ RUN apk add --update --no-cache \
 RUN git clone -q https://github.com/google/googletest.git /googletest && \
     mkdir -p /googletest/build && \
     cd /googletest/build && \
-    cmake -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_COMPILER=gcc .. && \
+    cmake -DCMAKE_C_COMPILER=$cc \
+          -DCMAKE_CXX_COMPILER=$cxx \
+          .. && \
     make && make install && \
     cd / && rm -rf /googletest
 
 RUN ldconfig /etc/ld.so.conf.d
 
-COPY . .
-
 RUN mkdir build && \
     cd build && \
-    cmake -DCMAKE_CXX_COMPILER=g++ \
-          -DCMAKE_C_COMPILER=gcc \
+    cmake -DCMAKE_C_COMPILER=$cc \
+          -DCMAKE_CXX_COMPILER=$cxx \
           -DCMAKE_BUILD_TYPE=Debug \
           -DBUILD_SHARED_LIB=$build_shared_lib \
           .. && \
