--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,9 @@ jobs:
           sudo cmake ..
           sudo make
           sudo make install
+      - name: Update Links and Cache of Linker
+        run: |
+          sudo ldconfig
       - name: Build the Library and Tests
         run: |
           sudo mkdir build
