--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Generate Dockerfile
         run: |
+          pip install -r docker/requirements.txt
           python docker/compile.py --os=${{ matrix.os }} \
                                    --compiler=${{ matrix.compiler }}-${{ matrix.compiler_version }} \
                                    --out=./test.Dockerfile
