--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Build the Library
         run: |
-          sudo docker run -it -v $PWD:/app xalwart/gcc:10-alpine-3.13 \
+          sudo docker run -i -v $PWD:/app xalwart/gcc:10-alpine-3.13 \
                           bash /app/misc/build.sh alpine dev ${{ matrix.build_shared_lib }}
       - name: Upload the Artifact
         uses: actions/upload-artifact@v2
