--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Build the Library
         run: |
           sudo docker run -i -v $PWD:/app xalwart/gcc:10-alpine-3.13 \
+                          bash -c "ls /app"
+          sudo docker run -i -v $PWD:/app xalwart/gcc:10-alpine-3.13 \
                           bash /app/misc/build.sh alpine dev ${{ matrix.build_shared_lib }}
       - name: Upload the Artifact
         uses: actions/upload-artifact@v2
