--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
       matrix:
         build_shared_lib: [ on, off ]
     steps:
+      - name: TEST
+        run: |
+          ls
       - name: Build the Library
         run: |
           sudo docker run -i -v $PWD:/app xalwart/gcc:10-alpine-3.13 \
