--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           ls $PWD
       - name: Build the Library
         run: |
-          sudo docker run -i -v $PWD:/app xalwart/gcc:10-alpine-3.13 \
+          sudo docker run -i -v ${{ github.workspace }}:/app xalwart/gcc:10-alpine-3.13 \
                           bash -c "ls && ls /app"
 #          sudo docker run -i -v $PWD:/app xalwart/gcc:10-alpine-3.13 \
 #                          bash /app/misc/build.sh alpine dev ${{ matrix.build_shared_lib }}
