--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,23 +14,16 @@ jobs:
       matrix:
         build_shared_lib: [ on, off ]
     steps:
-      - name: TEST
-        run: |
-          echo $(pwd)
-          echo ${{ github.workspace }}
-          ls ${{ github.workspace }}
       - name: Build the Library
         run: |
-          sudo docker run -i -v $(pwd):/app xalwart/gcc:10-alpine-3.13 \
-                          bash -c "ls && ls /app"
-#          sudo docker run -i -v $PWD:/app xalwart/gcc:10-alpine-3.13 \
-#                          bash /app/misc/build.sh alpine dev ${{ matrix.build_shared_lib }}
-#      - name: Upload the Artifact
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: xalwart.base-linux-dev.tar.gz
-#          path: xalwart.base-linux-dev.tar.gz
-#          retention-days: 90
+          sudo docker run -i -v ${{ github.workspace }}:/app xalwart/gcc:10-alpine-3.13 \
+                          bash /app/misc/build.sh alpine dev ${{ matrix.build_shared_lib }}
+      - name: Upload the Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: xalwart.base-linux-dev.tar.gz
+          path: xalwart.base-linux-dev.tar.gz
+          retention-days: 90
   test:
     name: "${{ matrix.os }} [${{ matrix.compiler }}-${{ matrix.compiler_version }}] [shared: ${{ matrix.build_shared_lib }}]"
     needs: [compile-lib]
@@ -55,6 +48,6 @@ jobs:
           tar -xvzf xalwart.base-linux-dev.tar.gz -C xalwart.base/
       - name: Run Tests
         run: |
-          sudo docker run -i -v $PWD:/app \
+          sudo docker run -i -v ${{ github.workspace }}:/app \
                           xalwart/gtest:1.11.0-${{ matrix.compiler }}-${{ matrix.compiler_version }}-${{ matrix.os }} \
                           bash /app/misc/test.sh ${{ matrix.os }}
