--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           sudo docker run -i \
                           -v ${{ github.workspace }}:/app \
                           xalwart/gcc:10-ubuntu-18.04 \
-                          bash /app/misc/build.sh ${{ matrix.lib_type }}
+                          bash /app/misc/build.sh ubuntu ${{ matrix.lib_type }}
       - name: Upload the Artifact
         uses: actions/upload-artifact@v2
         with:
@@ -50,4 +50,4 @@ jobs:
           sudo docker run -i \
                           -v ${{ github.workspace }}:/app \
                           xalwart/gtest:1.11.0-${{ matrix.compiler }}-${{ matrix.compiler_version }}-${{ matrix.os }} \
-                          bash /app/misc/test.sh ${{ matrix.lib_type }}
+                          bash /app/misc/test.sh ${{ matrix.os }} ${{ matrix.lib_type }}
