--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,15 +9,7 @@ list(LENGTH SOURCES SOURCES_COUNT)
 message(STATUS "[INFO] Sources found: ${SOURCES_COUNT}")
 
 # Build shared library.
-if (NOT BUILD_SHARED_LIB)
-    set(BUILD_SHARED_LIB off)
-endif()
-
-if (${BUILD_SHARED_LIB})
-    add_library(${LIBRARY_NAME} SHARED ${SOURCES})
-else()
-    add_library(${LIBRARY_NAME} STATIC ${SOURCES})
-endif()
+add_library(${LIBRARY_NAME} ${SOURCES})
 
 # Install library.
 install(
