--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+# Search for sources.
 set(LIB_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
 file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true ${LIB_SRC_DIR}/*.h ${LIB_SRC_DIR}/*.cpp)
 foreach(entry ${SOURCES})
@@ -8,16 +9,15 @@ endforeach()
 list(LENGTH SOURCES SOURCES_COUNT)
 message(STATUS "[INFO] Sources found: ${SOURCES_COUNT}")
 
-# Build shared library.
+# Add the library.
 add_library(${LIBRARY_NAME} ${SOURCES})
 
-# Install library.
+# Install the library.
 install(
     TARGETS ${LIBRARY_NAME}
     ARCHIVE DESTINATION ${GNU_LIB_DIR}
     LIBRARY DESTINATION ${GNU_LIB_DIR}
 )
-
 install(
     DIRECTORY "${LIB_SRC_DIR}/"
     DESTINATION ${GNU_INCLUDE_DIR}/${LIBRARY_NAME}
