--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,23 +17,25 @@ jobs:
             version: 3.13
           - name: ubuntu
             version: 18.04
+        compiler: [ gcc, clang ]
+        compiler_version: [ 10 ]
     steps:
       - uses: actions/checkout@v2
       - name: Build the Library
         run: |
           sudo docker run -i \
                           -v ${{ github.workspace }}:/app \
-                          xalwart/gcc:10-${{ matrix.os.name }}-${{ matrix.os.version }} \
-                          bash /app/scripts/linux/build.sh ${{ matrix.os.name }} gcc
+                          xalwart/${{ matrix.compiler }}:${{ matrix.compiler_version }}-${{ matrix.os.name }}-${{ matrix.os.version }} \
+                          bash /app/scripts/linux/build.sh ${{ matrix.os.name }} ${{ matrix.compiler }}
       - name: Upload the Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: xalwart.base-${{ matrix.os.name }}
-          path: xalwart.base-${{ matrix.os.name }}
+          name: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
+          path: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
           retention-days: 90
   test:
     name: "${{ matrix.os.name }}-${{ matrix.os.version }} [${{ matrix.compiler }}-${{ matrix.compiler_version }}]"
-    needs: [compile-lib]
+    needs: [ compile-lib ]
     runs-on: ubuntu-18.04
     strategy:
       fail-fast: false
@@ -52,8 +54,8 @@ jobs:
       - name: Download the Artifact
         uses: actions/download-artifact@v2
         with:
-          name: xalwart.base-${{ matrix.os.name }}
-          path: xalwart.base-${{ matrix.os.name }}
+          name: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
+          path: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
       - name: Build and Run Tests
         run: |
           sudo docker run -i \
